--- a/css/estilo.css
+++ b/css/estilo.css
@@ -11,6 +11,7 @@ header{
 
 #texto-header{
     width: 100%;
+    position: absolute;
     text-align: center;
     padding-top: 15% ;
 }
@@ -166,6 +167,7 @@ header{
         margin-top: 10px;
         padding: 0;
         color: rgb(95, 95, 95);
+        font-weight: 100;
     }
 
     footer p{
@@ -174,78 +176,77 @@ header{
     }
     @media (max-width: 575px) {
 
-        header{ 
-            width: 100%;
-            height: 400px;
-            background: url(../imagens/fundo.png) no-repeat 100%;
-        }
-
-        #texto-header{
-            width: 100%;
-            text-align: center;
-            clear: both;
-        }
-        
-        #navlat{
-            visibility: collapse;
-                        
-        }
-
         #logo{
-            clear: both;
-            margin: 0;
-            padding: 0;
+            visibility: collapse;
         }
+       
 
-        #sobremim{
-            height: 500px;
-        }
-        
-        #sobremim-foto{
-            width:35%;
-        }
-        
-        
-        #sobremim-texto{
-            margin-left: 15%;
-            margin-bottom: 30px;
-        }
-        
-        #sobremim-texto p{
-            text-align: justify;   
-           
-        }
-        
-        #btn-sobremim{
-            width: 100%;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        
-        
-        #btn-cv a{
-            text-decoration: none;
-            color: black;
-        }
-
-        #skills{
-            background: url(../imagens/fundo.png) no-repeat 100%;
-        }
-
-        #barra{
-            width: 90%;
-            text-align: center;
-            margin-left: 10%
-        }
-
-        footer{
-            margin-top: 5px;
-            clear: both;
-        }
-
-        footer p{
-            padding: 0;
-            margin: 0;
-        }
     }
+
+    @media (max-width: 767px) {
+            header{ 
+                width: 100%;
+                height: 400px;
+                background: url(../imagens/fundo.png) no-repeat 100%;
+            }
+    
+            #texto-header{
+                width: 100%;
+                clear: both;
+            }
+            
+            #navlat{
+                visibility: collapse;
+                            
+            }
+    
+            #logo{
+                clear: both;
+                margin: 0;
+                padding: 0;
+            }
+    
+            #sobremim{
+                height: 500px;
+            }
+            
+            #sobremim-foto{
+                width:35%;
+                max-width: 200px;
+            }
+            
+            
+            #sobremim-texto{
+                margin-left: 15%;
+                margin-bottom: 30px;
+            }
+            
+            #btn-sobremim{
+                width: 100%;
+                text-align: center;
+                margin: 0;
+                padding: 0;
+            }
+            
+       
+            #skills{
+                background: url(../imagens/fundo.png) no-repeat 100%;
+            }
+    
+            #barra{
+                width: 90%;
+                text-align: center;
+                margin-left: 10%
+            }
+    
+        }
+
+
+        @media (max-width: 991px) {
+            #btn-contato{
+                
+                margin: 0;
+                
+            }
+        }
+
